# CnC-Generals-ZeroHour-Android

./: .gitattributes  .gitignore  BUILDING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md
docs/: CONTROLS.md  (+6 more)
engine/Core/Libraries/Source/profile/: CMakeLists.txt  internal.h  internal_funclevel.h  profile.cpp  profile.h  profile_cmd.cpp  profile_funclevel.cpp  profile_funclevel.h  profile_highlevel.cpp  profile_highlevel.h  profile_result.cpp
engine/Generals/Code/Libraries/Source/WWVegas/: CMakeLists.txt
engine/Generals/Code/Libraries/Source/WWVegas/WW3D2/: CMakeLists.txt  assetmgr.cpp  boxrobj.h  dazzle.h  ddsfile.cpp  ddsfile.h  hlod.cpp  hlod.h  hrawanim.cpp  mapper.h  matrixmapper.h  mesh.h  meshbuild.cpp  meshgeometry.h  meshmatdesc.h  meshmdl.cpp  meshmdl.h  meshmdlio.cpp  motchan.h  nullrobj.h  part_emt.cpp  part_ldr.cpp  part_ldr.h  render2d.h  scene.h  shader.cpp  shader.h  vertmaterial.cpp  vertmaterial.h  ww3d.cpp
engine/Generals/Code/Main/: CMakeLists.txt  LinuxStubs.cpp  SDL3Main.cpp  WinMain.cpp
engine/GeneralsMD/Code/: CMakeLists.txt
engine/GeneralsMD/Code/CompatLib/: CMakeLists.txt  Includecho
engine/GeneralsMD/Code/CompatLib/Include/: com_compat.h  comip.h  comip_compat.h  d3dx8math.h  memory_compat.h  string_compat.h  time_compat.h  vfw_compat.h  windows_wrapper.h  wnd_compat.h
engine/GeneralsMD/Code/CompatLib/Source/: d3dx8_compat.cpp  d3dx8math.cpp  module_compat.cpp  string_compat.cpp  thread_compat.cpp  time_compat.cpp  wnd_compat.cpp
engine/GeneralsMD/Code/GameEngine/: CMakeLists.txt
engine/GeneralsMD/Code/GameEngine/Include/Common/: BezierSegment.h  BitFlags.h  BuildAssistant.h  CriticalSection.h  DamageFX.h  File.h  GameEngine.h  GameState.h  GlobalData.h  KindOf.h  MessageStream.h  Module.h  ModuleFactory.h  Player.h  PlayerList.h  Recorder.h  StateMachine.h  Team.h  ThingFactory.h  TunnelTracker.h  Upgrade.h
engine/GeneralsMD/Code/GameEngine/Include/GameClient/: ControlBar.h  GUICallbacks.h  GameClient.h  InGameUI.h
engine/GeneralsMD/Code/GameEngine/Include/GameLogic/: AIGuardRetaliate.h  AIStateMachine.h  Armor.h  FPUControl.h  GameLogic.h  Locomotor.h  Object.h  ObjectCreationList.h  PartitionManager.h  PolygonTrigger.h  ScriptActions.h  ScriptConditions.h  ScriptEngine.h  TerrainLogic.h  Weapon.h
engine/GeneralsMD/Code/GameEngine/Include/GameLogic/Module/: AIUpdate.h  AssistedTargetingUpdate.h  BodyModule.h  CollideModule.h  CreateModule.h  DamageModule.h  DestroyModule.h  DieModule.h  FlightDeckBehavior.h  HelixContain.h  HordeUpdate.h  JetAIUpdate.h  ObjectHelper.h  OpenContain.h  OverlordContain.h  ParkingPlaceBehavior.h  SpecialPowerUpdateModule.h  TunnelContain.h  UpdateModule.h  UpgradeModule.h
engine/GeneralsMD/Code/GameEngine/Include/Precompiled/: PreRTS.h
engine/GeneralsMD/Code/GameEngine/Source/Common/: CommandLine.cpp  GameEngine.cpp  GameLOD.cpp  GlobalData.cpp  MessageStream.cpp  MultiplayerSettings.cpp  PerfTimer.cpp  Recorder.cpp  version.cpp
engine/GeneralsMD/Code/GameEngine/Source/Common/Bezier/: BezFwdIterator.cpp  BezierSegment.cpp
engine/GeneralsMD/Code/GameEngine/Source/Common/INI/: INICommandButton.cpp  INIMapCache.cpp
engine/GeneralsMD/Code/GameEngine/Source/Common/RTS/: ActionManager.cpp  Player.cpp  PlayerList.cpp  Team.cpp  TunnelTracker.cpp
engine/GeneralsMD/Code/GameEngine/Source/Common/System/: BuildAssistant.cpp  DataChunk.cpp  FunctionLexicon.cpp  Geometry.cpp  KindOf.cpp  QuotedPrintable.cpp  StackDump.cpp  Trig.cpp  Upgrade.cpp  registry.cpp
engine/GeneralsMD/Code/GameEngine/Source/Common/Thing/: ThingTemplate.cpp
engine/GeneralsMD/Code/GameEngine/Source/GameClient/: Drawable.cpp  GameClient.cpp  GameText.cpp.orig  GameText.cpp.rej  InGameUI.cpp
engine/GeneralsMD/Code/GameEngine/Source/GameClient/GUI/: GameWindowManager.cpp
engine/GeneralsMD/Code/GameEngine/Source/GameNetwork/: GUIUtil.cpp
engine/GeneralsMD/Code/GameEngineDevice/: CMakeLists.txt
engine/GeneralsMD/Code/GameEngineDevice/Include/: OpenALAudioManager.h  PchCompat.h  SDL3GameEngine.h
engine/GeneralsMD/Code/GameEngineDevice/Source/: OpenALAudioManager.cpp  SDL3GameEngine.cpp
engine/GeneralsMD/Code/GameEngineDevice/Source/VideoDevice/: BinkVideoPlayerStub.cpp
engine/GeneralsMD/Code/Libraries/Source/WWVegas/: CMakeLists.txt
engine/GeneralsMD/Code/Main/: CMakeLists.txt  LinuxStubs.cpp  SDL3Main.cpp  WinMain.cpp
engine/GeneralsMD/Code/Tools/GUIEdit/: CMakeLists.txt
engine/GeneralsMD/Code/Tools/GUIEdit/Include/: GUIEditDisplay.h  HierarchyView.h
engine/GeneralsMD/Code/Tools/WorldBuilder/: CMakeLists.txt
engine/GeneralsMD/Code/Tools/WorldBuilder/include/: CFixTeamOwnerDialog.h  EditAction.h  EditCondition.h  EditCoordParameter.h  EditGroup.h  EditObjectParameter.h  EditParameter.h  FeatherOptions.h  GroveOptions.h  ImpassableOptions.h  MainFrm.h  MapSettings.h  MoundOptions.h  NewHeightMap.h  ObjectPreview.h  OpenMap.h  OptionsPanel.h  RampOptions.h  RulerOptions.h  SaveMap.h  SelectMacrotexture.h  TeamBehavior.h  TeamGeneric.h  TeamIdentity.h  TeamObjectProperties.h  TeamReinforcement.h  TerrainSwatches.h  WBFrameWnd.h  WBPopupSlider.h  WorldBuilderDoc.h  WorldBuilderView.h  addplayerdialog.h  brushoptions.h  propedit.h  wbview.h  wbview3d.h
engine/GeneralsMD/Code/Tools/WorldBuilder/src/: LayersList.cpp  ScriptDialog.cpp  WaterOptions.cpp  WaypointOptions.cpp  wbview3d.cpp
engine/GeneralsMD/Code/Tools/wdump/: FindDialog.h  mainfrm.h  wdeview.h  wdlview.h  wdtview.h  wdump.cpp  wdump.h  wdumpdoc.h  wdview.h
engine/Patches/SagePatch/: CMakeLists.txt
engine/Patches/SagePatch/include/SagePatch/: Features.h  Hooks.h  Logger.h
engine/Patches/SagePatch/resources/: Override.ini
engine/Patches/SagePatch/src/common/: CursorLock.cpp  Init.cpp  KeyHandler.cpp  WindowPosition.cpp
engine/Patches/SagePatch/src/linux/: Brightness_linux.cpp  Screenshot_linux.cpp  interposers_linux.cpp
engine/Patches/SagePatch/src/macos/: Brightness_macos.cpp  Screenshot_macos.cpp  interposers_macos.cpp
engine/Patches/SagePatch/src/windows/: Stubs_windows.cpp
(+972 files in other folders)
